--- a/MediFinder-PatiendEnd/src/main/res/layout/activity_hospital_screen.xml
+++ b/MediFinder-PatiendEnd/src/main/res/layout/activity_hospital_screen.xml
@@ -40,4 +40,13 @@
         android:layout_marginTop="30dp"
         android:onClick="logOut"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/callTest"
+        android:layout_below="@id/logout"
+        android:layout_centerHorizontal="true"
+        android:text="Call Test"
+        android:onClick="tryCall"/>
+
 </RelativeLayout>
